backend/src/main/java/com/example/backend/cmm/error/exception/ValidationException.java
package com.example.backend.cmm.error.exception;

public class ValidationException extends RuntimeException{
    public ValidationException(String message) {
        super(message);
    }
}
